--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,26 @@
   text-align: center;
 }
 
+body {
+  background-color: white;
+}
+
+.app__body {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+}
+
+.app__container {
+  background-color: #242472;
+  width: 1024px;
+  height: 100%;
+  display: flex;
+  padding-left:48px; 
+  padding-right:48px; 
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,14 +34,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color:white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: blue;
 }
 
 .App-link {
