--- a/src/Newsfeed.css
+++ b/src/Newsfeed.css
@@ -9,9 +9,14 @@
   }
 
   .newsfeed__portfolio h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin:0; 
   }
 
   .newsfeed__portfolio p{
     margin-top:0; 
+  }
+
+  .newsfeed__chart{
+    color: blue; 
   }
