--- a/src/Header.css
+++ b/src/Header.css
@@ -29,7 +29,8 @@
 
 .header__searchContainer > input { 
     background-color: white;
-    color: #242472;
+    color: blue; 
+    /* color:blue;  */
     font-weight: bold;
     width: 100%;
     margin-left: 5px;
@@ -48,7 +49,6 @@
 
 .header__menuItems a {
     color:#242472;
-    
     font-weight: bold;
     text-decoration: none;
     padding: 0 10px;
