--- a/src/Newsfeed.css
+++ b/src/Newsfeed.css
@@ -1,8 +1,13 @@
 .newsfeed {
-    border: 1px solid blueviolet;
+    /* border: 1px solid blueviolet; */
     flex: 0.7;
     color:white;
   }
+
+.newsfeed__chartSection {
+  display: flex; 
+  flex-direction:column; 
+}
 
   .newsfeed__portfolio {
     text-align: left;
@@ -11,12 +16,14 @@
   .newsfeed__portfolio h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin:0; 
+    color:blue; 
   }
 
   .newsfeed__portfolio p{
     margin-top:0; 
+    color: blue; 
   }
 
   .newsfeed__chart{
-    color: blue; 
+    width:100%;
   }
