--- a/src/Newsfeed.css
+++ b/src/Newsfeed.css
@@ -24,6 +24,47 @@
     color: blue; 
   }
 
-  .newsfeed__chart{
-    width:100%;
+  .newsfeed__buying__section{
+    display:flex; 
+    justify-content: space-between;
+    font-size: small;  
+    color:rgb(36, 36, 101); 
+    padding: 10px 0px 20px 0px; 
   }
+
+  .newsfeed__market__section{
+   margin-top: 40px; 
+  }
+
+  .newsfeed__market__box{
+    height: 10vh; 
+    padding: 20px; 
+    border: 1px solid grey;
+    border-radius: 4px; 
+    color:rgb(36, 36, 101); 
+    text-align:left; 
+  }
+
+  .newsfeed__market__box p {
+    color: rgb(161, 156, 156);
+    font-size: 15px; 
+    text-transform: uppercase; 
+    font-weight:700px; 
+    margin-bottom: 8px; 
+  }
+
+  .newsfeed__chart {
+    width:100%; 
+  }
+
+  .newsfeed__popularlists__section{
+    margin-top: 60px; 
+  }
+
+  .newsfeed__popularlists__intro{
+    display: flex; 
+    justify-content: space-between;
+    align-items: center; 
+    padding: 20px 0px 20px 0px; 
+  }
+
