--- a/src/Dashboard/Newsfeed.css
+++ b/src/Dashboard/Newsfeed.css
@@ -1,7 +1,6 @@
 .newsfeed {
     /* border: 1px solid blueviolet; */
     flex: 0.7;
-    color:white;
   }
 
 .newsfeed__chartSection {
@@ -16,12 +15,12 @@
   .newsfeed__portfolio h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin:0; 
-    color:blue; 
+    color:rgb(132,74,225)
   }
 
   .newsfeed__portfolio p{
     margin-top:0; 
-    color: blue; 
+    color:rgb(140,161,169)
   }
 
   .newsfeed__buying__section{
@@ -51,7 +50,7 @@
    }
  
    .newsfeed__content__box{
-     height: 15vh; 
+     height: 24vh; 
      padding: 20px; 
      border: 1px solid grey;
      border-radius: 10px; 
@@ -59,6 +58,12 @@
      text-align:left; 
      font-family: Franklin Gothic Medium;
    }
+
+   .newsfeed__content__box p {
+    float:right;
+    width:760px;
+    margin-top: 5px;
+  }
 
   .newsfeed__market__box h3 {
     color: 33404F;
