--- a/src/Dashboard/Stats.css
+++ b/src/Dashboard/Stats.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     padding: 0px 30px 30px 30px;
-    
+    min-width: fit-content;
+    margin-top: 30px;
   }
   
   .stats__container {
@@ -11,7 +12,7 @@
     flex: 1;
     background-color: rgb(132, 74,225);
     border-radius: 5px;
-    border: 1px solid white;
+    border: 1px solid rgb(132, 74,225);
     color: white; 
   }
   
